# dns-server

./: .dockerignore  NEW_DIRECTION.md  README.md  docker-compose.yml
.gitea/workflows/: docker-build.yaml
.github/workflows/: docker-build.yaml
archive/control-plane/cmd/server/: main.go
archive/control-plane/internal/api/: handlers.go  routes.go
archive/control-plane/internal/database/: db.go
archive/control-plane/internal/models/: blocklist.go  tenant.go
archive/data-plane/: Cargo.toml
archive/data-plane/src/: analytics.rs  main.rs
config/adguard/: AdGuardHome.yaml
config/technitium/: dns.config
control-plane/: Dockerfile  go.mod
control-plane/cmd/server/: main.go
control-plane/internal/api/: blocklists.go  logs.go  routes.go
control-plane/internal/database/: db.go  redis.go
control-plane/internal/services/: blocklist_worker.go
dashboard/: Dockerfile  package-lock.json
data-plane/: Cargo.toml  Dockerfile
data-plane/src/: analytics.rs  config_sync.rs  filter.rs  handler.rs  main.rs
deploy/: .env.example  docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/adguard/: route.ts
frontend/app/filtering/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/services/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/zones/: page.tsx
frontend/dashboard/: Dockerfile
frontend/dashboard/app/: layout.tsx  page.tsx
frontend/dashboard/lib/: technitium.ts
frontend/lib/: adguard.ts  technitium.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
(+11 files in other folders)
