[package]
name = "data-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
# hickory-server for serving DNS requests
hickory-server = { version = "0.24", features = ["dns-over-https", "dns-over-quic", "recursor"] }
# hickory-resolver for recursive logic if using custom handler
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-https", "dns-over-quic"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
async-trait = "0.1"
regex = "1.10"
aho-corasick = "1.1"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pin time version to avoid edition 2024 error (v0.3.46 requires rust 1.85+)
time = "=0.3.36"
